<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"

    android:scrollbars="vertical">

    <Button
        android:id="@+id/ButtonSendFeedback"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="53dp"
        android:background="@drawable/mybutton"
        android:text="@string/feedbackbutton"
        android:textColor="@android:color/background_light"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:textColor="@android:color/background_light"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


        <!--Put form controls here-->

        <TextView
            android:id="@+id/TextViewTitle"
            android:textColor="@android:color/background_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zgłoszenie"
            android:textSize="10pt"></TextView>



        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"

            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress"></EditText>

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:background="@drawable/mybutton"
            android:textColor="@android:color/background_light"

            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:entries="@array/feedbacktypelist"
            android:prompt="@string/feedbacktype"></Spinner>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_width="fill_parent"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"

            android:layout_height="wrap_content"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"></EditText>

    </LinearLayout>


</RelativeLayout>